# BifiOutboard

./: .gitignore  LICENSE.txt  PVCAPTEST_LICENSE.txt  README.md  environment.yml  environment1.yml  environment_from-history.yml  environment_pinned.yml  environment_pinned_linux.yml
analysis/: PV_captest_design_doc.qmd  losstree_sample.xlsx  prelim.qmd
data/: Inventory.xlsx  Test_Bifacial_Project_Geom3.SFI
data/FT/: Test Bifi Sheds_Project_VC0_HourlyRes_0.CSV  Test Bifi Sheds_Project_VC1_HourlyRes_0.CSV  Test Bifi Sheds_Project_VC2_HourlyRes_0.CSV  Test Bifi Sheds_Project_VC3_HourlyRes_0.CSV  (+1 more)
pvsc52/: BifiOutboardPVSC52.bib  Pvsc52.qmd  _quarto.yml  ieee-w-url.csl  title.tex
pvsc52_presentation/: Newmiller_BifiASTMCapTestOutboardOral_2024.qmd
src/: pyproject.toml
src/bifi-outboard/: __init__.py
src/bifi_outboard/: __init__.py  outboard_sat.py  pvsystcsv.py
src/bifi_outboard/captest/: __init__.py  capdata.py  io.py  prtest.py
src/bifi_outboard/captest_prototype/: captest_info.py  column_selection.py  io.py  model.py  model_ols.py  sim_study.py
src/bifi_outboard/captest_prototype/tests/: column_selection_test.py  io_test.py  model_ols_test.py  sim_study_test.py
src/bifi_outboard/captest_prototype/tests/data/: Test Bifi SAT_Project_VC1_HourlyRes_0.CSV  pvsyst_example_HourlyRes_2.CSV
src/bifi_outboard/pvcaptest/: __init__.py  captest.py  columngroups.py  io.py
stt_20240523/: solar_tech_talk_20240425_iec61724-2.qmd  stt_20240523_JNEWM_bifi_outboard.qmd
tests/: test_ct_captest.py  test_ct_columngroups.py  test_ct_io.py  test_outboard_sat.py
(+13 files in other folders)
